finished basic functionality - adding styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Header from '../components/Header.astro';
+import UrlShortener from '../components/UrlShortener.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="URL Shortener">
 	<Header/>
 	<main>
-		
-
+		<h1>URL Shortener</h1>
+		<UrlShortener />
 		
 	</main>
 </Layout>
